--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://sysc:sysc4806@amazin.oxbkkpk.mongodb.net/test
+      uri: mongodb+srv://sysc:sysc4806@amazin.oxbkkpk.mongodb.net/Amazin
